<resources>
    <string name="app_name">InClass13</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sign_up">New User?</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="email_signup">Email</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="choose_password">Password</string>
    <string name="repeat_password">Confirm Password</string>
    <string name="cancel">Cancel</string>
    <string name="sign_up_dataFill">Sign up</string>
    <string name="login_activity">MessageMe!</string>
    <!--<string name="signup_activity">Sign Up</string>-->
    <string name="token_signup">tokensignup</string>
    <string name="token_login">tokenlogin</string>
    <string name="title_activity_chatroom">chatroom</string>
    <string name="type_message_to_send">Type message to send</string>
    <string name="add_new_thread">Add new thread</string>
    <string name="current_threads">Current threads</string>
    <string name="login_unsuccessful">Login not sucessful</string>
    <string name="Signup_unsuccessful">Signup not successful</string>
    <string name="Threads_unsuccessful">Threads retreival unsuccessful</string>
    <string name="Threads_add_unsuccessful">Threads addition unsuccessful</string>
    <string name="msg_delete_unsuccessful">Message delete not successful</string>
    <string name="Threads_delete_unsuccessful">Thread delete not successful</string>
    <string name="msg_get_unsuccessful">Message retreival notsuccessful</string>
    <string name="msg_add_unsuccessful">Message addition unsuccessful</string>
    <string name="emaill_password_message">All fields are mandatory</string>
    <string name="password_confirm_password_message">Password and Confirm password doesn\'t match</string>
    <string name="msg_threads">Message Threads</string>
    <string name="content_desc">imagebutton_cdesc</string>
    <string name="added_threads_successful">Added threads successfully</string>
    <string name="delete">delete</string>
    <string name="replymail">reply</string>
    <string name="newmail">newMail</string>
    <string name="logout">logout</string>
    <string name="usersList">Users</string>
    <string name="contact_blank">Contact field is blank</string>
    <string name="sentToast">Sent</string>
    <string name="to">To:</string>
    <string name="content_descfdvdsc">Contentesc</string>
    <string name="sent_button">Send</string>
    <string name="from">From:</string>
    <string name="conr">fv</string>
    <string name="msg_signup">MessageMe! (Sign Up)</string>
    <string name="inbox">Inbox</string>
    <string name="readMsg">Read Message</string>
    <string name="cmpMessage">Compose Message</string>
</resources>
